--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 ">
     <title>Shridhar Pattar</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -37,9 +37,9 @@
             <div class="content">
                 <img src="hero.png" class="img1">
                 <div class="text">
-                    <h2>Hello, I'm</h1>
-                        <h1>Shridhar Pattar
-                    </h2>
+                    <h2>Hello, I'm</h2>
+                    <h1>Shridhar Pattar
+                    </h1>
 
                     <h3>FullStack Developer</h3>
 
@@ -105,7 +105,7 @@
 
 
 
-                        Images/
+
                     </div>
                     <div class="part33">
                         <h1 class="skillname">Backend Development</h1>
@@ -129,7 +129,8 @@
                 <h1>Projects</h1>
                 <div class="content4">
                     <div class="b1">
-                        <img src="p1.png" alt="">
+                        <div class="allimg"><img src="p1.png" alt=""></div>
+
                         <div class="projects">
                             <h1>Weather App</h1>
                             <button><a href="https://github.com/Shridhar-Pattar/WeatherApplication"
@@ -139,7 +140,7 @@
                         </div>
                     </div>
                     <div class="b2">
-                        <img src="p2.png" alt="">
+                        <div class="allimg"><img src="p2.png" alt=""></div>
                         <div class="projects">
                             <h1>Shopping App</h1>
                             <button><a href="https://github.com/Shridhar-Pattar/EcommerceFullStackApplication"
@@ -150,7 +151,7 @@
                     </div>
 
                     <div class="b3">
-                        <img src="p3.png" alt="">
+                        <div class="allimg"><img src="p3.png" alt=""></div>
                         <div class="projects">
                             <h1>Food App</h1>
                             <button><a href="https://github.com/Shridhar-Pattar/ReactFoodOrderingWebsite"
@@ -167,7 +168,7 @@
                 <p>Get in Touch</p>
                 <h1>Contact Me</h1>
                 <div class="maili">
-                    <img src="email.png" alt="">
+                    <img class="pic1" src="email.png" alt="">
                     <img src="linkedin.png" alt="">
                 </div>
                 <div class="btn">
