--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
                         <div class="skills">
 
                             <h1>Springboot<img src="rating.png" class="rating" alt=""></h1>
+                            <h1>RESTful Api<img src="rating.png" class="rating" alt=""></h1>
                             <h1>MySQL<img src="rating.png" class="rating" alt=""></h1>
-                            <h1>Github<img src="rating.png" class="rating" alt=""></h1>
                         </div>
 
 
